test/sema/traits/trait_implemented_multiple_times.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

struct S {
  impl A;

  // CHECK: [[# @LINE + 1]]:8: error: trait 'A' is already implemented for struct 'S'
  impl A;
}

fn main() {}
